--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@polpware/bs-components",
-  "version": "9.0.3",
+  "version": "9.0.4",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
     "ngx-bootstrap": "6.x",
-    "uuid": "8.x"
+    "uuid": "8.x",
+    "@40three/ngx-autofocus-directive": "9.x"
   },
   "main": "bundles/polpware-bs-components.umd.js",
   "module": "fesm5/polpware-bs-components.js",
