--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polpware/bs-components",
-  "version": "9.0.10",
+  "version": "9.1.0",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
@@ -8,7 +8,9 @@
     "uuid": "8.x",
     "@40three/ngx-autofocus-directive": "^9.0.0",
     "ngx-autosize": "^1.8.0",
-    "polpware/ngx-input-validators": "^9.0.0"
+    "@polpware/ngx-input-validators": "^9.0.0",
+    "@polpware/ngx-email-composer": "^9.0.0",
+    "ngx-chips": "2.2.0"
   },
   "main": "bundles/polpware-bs-components.umd.js",
   "module": "fesm5/polpware-bs-components.js",
