--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polpware/bs-components",
-  "version": "9.1.5",
+  "version": "9.2.0",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
@@ -14,7 +14,8 @@
     "@fortawesome/angular-fontawesome": "0.6.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0"
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "ngx-mask": "^9.1.4"
   },
   "main": "bundles/polpware-bs-components.umd.js",
   "module": "fesm5/polpware-bs-components.js",
