--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polpware/bs-components",
-  "version": "9.3.1",
+  "version": "9.4.0",
   "peerDependencies": {
     "@angular/common": "^9.0.0",
     "@angular/core": "^9.0.0",
@@ -10,6 +10,7 @@
     "ngx-autosize": "^1.8.0",
     "@polpware/ngx-input-validators": "^9.0.0",
     "@polpware/ngx-email-composer": "^9.0.0",
+    "@polpware/ngx-form-common": "^9.0.0",
     "ngx-chips": "2.2.0",
     "@fortawesome/angular-fontawesome": "0.6.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
